# SobelInterop

./: CMakeLists.txt  README.md  main.cpp
